recordatorios conectados al nuevo back

--- a/src/app/add-reminder/add-reminder.component.html
+++ b/src/app/add-reminder/add-reminder.component.html
@@ -15,11 +15,11 @@
         <div class="input-reminder">
             <p>Repetir:</p>
             <select name="" id="input-repeat" [(ngModel)]="selectedRepeat">
-                <option value="Diario" selected>Diario</option>
-                <option value="Semanal" selected>Semanal</option>
-                <option value="Mensual" selected>Mensual</option>
-                <option value="Anual" selected>Anual</option>
-                <option value="Ninguno" selected>Ninguno</option>
+                <option value="diario" selected>diario</option>
+                <option value="semanal" selected>semanal</option>
+                <option value="mensual" selected>mensual</option>
+                <option value="anual" selected>anual</option>
+                <option value="ninguno" selected>ninguno</option>
             </select>
         </div>
         <div class="input-reminder">
