--- a/src/app/admin-add-event/admin-add-event.component.html
+++ b/src/app/admin-add-event/admin-add-event.component.html
@@ -78,11 +78,11 @@
                             <div class="event-data">
                                 <p>Repetir</p>
                                 <select name="event-repeat" id="">
-                                    <option value="Ninguno">Ninguno</option>
-                                    <option value="Diario">Diario</option>
-                                    <option value="Semanal">Semanal</option>
-                                    <option value="Mensual">Mensual</option>
-                                    <option value="Anual">Anual</option>
+                                    <option value="ninguno">ninguno</option>
+                                    <option value="diario">diario</option>
+                                    <option value="semanal">semanal</option>
+                                    <option value="mensual">mensual</option>
+                                    <option value="anual">anual</option>
                                 </select>
                             </div>
                         </div>
